<resources>
    <string name="app_name">DnD</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- main activity -->
    <string name="title_activity_main">MainActivity</string>


    <!-- menu_main.xml -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="section_format">Hello World from section: %1$d</string>

    <!--tab names from activty main -->
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Users</string>
    <string name="tab_text_3">Lists</string>

    <!--Common-->
    <string name="action_common_submit">submit</string>

    <!-- home fragments -->
    <string name="home_input_hint">Post a new announcment</string>


    <!-- User fragments -->
    <string name="user_list_title">Users:</string>
    <string name="user_chat_title_prefix">Chatting with </string>
    <string name="user_add_username_title">Name:</string>
    <string name="user_add_email_title">Email:</string>

    <!-- List Fragments -->
    <string name="list_meta_title">Lists:</string>
    <string name="list_view_title_suffix">:</string>
    <string name="list_meta_create">Create new list</string>
    <string name="list_view_create_hint">Add an item to this list</string>.
    <string name="list_meta_create_hint">Create a new list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
